recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:14: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:16: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:18: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:20: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^FourSquare:3: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:5: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:7: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:9: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^