recursion.logo.square.FourSquare.scala.code
override def run() {
  carre(100)
  gauche()
  carre(100)
  gauche()
  carre(100)
  gauche()
  carre(100)
  gauche()
}

def carre(l:Int) = {
  avance(l)
  droite()
  avance(l)
  droite()
  avance(l)
  droite()
  avance(l)
  droite()

 }